# homework

./: README.md
hw01/: pr_describe.md
hw01/stbiw/: CMakeLists.txt
hw02/: main.cpp  pr_describe.md
hw03/: main.cpp  pr_describe.md
hw04/: CMakeLists.txt  main.cpp  pr_describe.md
hw05/: main.cpp  pr_describe.md
hw06/: CMakeLists.txt  main.cpp  pr_describe.md
hw06/TBB_msvc_build_2020U1/Release/: tbb.exp  tbb.map  tbb_debug.lib  tbbmalloc.exp  tbbmalloc.lib  tbbmalloc.map  tbbmalloc_proxy.exp  tbbmalloc_proxy.lib  tbbmalloc_proxy.map
hw07/: ANSWER.md  main.cpp
hw08/: CMakeLists.txt  main.cu  pr_describe.md
hw08/include/: CudaAllocator.h
hw10/: ANSWER.md  CMakeLists.txt  main.cpp
hw11/: CMakeLists.txt  pr_describe.md
hw11/legacy/: CMakeLists.txt
hw11/mylib/: CMakeLists.txt
